# rag-tutorial

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
data/raw/: datasets.json  extract.py
doc/: 00_project_idea.md  DATA.md  tasklist.md  vision.md
homework/: IMPROVEMENTS.md  SUBMISSION.md
scripts/: check_generator.py  check_retrieval.py
tests/: test_amazon_index.py
