[project]
name = "rag-tutorial"
version = "0.1.0"
description = "Учебный RAG на отзывах Amazon Fire HD 8"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "scikit-learn",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
